[gd_scene load_steps=2 format=3 uid="uid://dpvw876fxlveo"]

[ext_resource type="Script" uid="uid://n6v7tj3680j0" path="res://Player/PlayerShip/player_ship.gd" id="1_my7ly"]

[node name="PlayerShip" type="Node3D"]
script = ExtResource("1_my7ly")

[node name="Hull_Node" type="Node3D" parent="."]

[node name="Keel_Node" type="Node3D" parent="."]

[node name="Nacelle_Node" type="Node3D" parent="."]

[node name="Wing_Node" type="Node3D" parent="."]
